delete-member function working properly
